<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>slam_primitives_interfaces</name>
  <version>0.2.0</version>
  <description>Header-only C++20 visual-SLAM primitives with optional CUDA, wrappers, and ROS 2 interfaces: ROS 2 message interfaces.</description>
  <maintainer email="petercalifano.gs@gmail.com">Pietro Califano</maintainer>
  <license>MIT</license>
  <url type="website">https://github.com/PeterCalifano/slam-primitives</url>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>

  <depend>std_msgs</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
